--- a/localDataManagement/scratchpad.ipynb
+++ b/localDataManagement/scratchpad.ipynb
@@ -4,6 +4,29 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>.container { width:100% !important; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.core.display import display, HTML\n",
+    "display(HTML(\"<style>.container { width:100% !important; }</style>\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from decimal import Decimal\n",
@@ -14,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,80 +80,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2018-04-09T00:31:38.438000Z\n",
-      "2018-04-08T22:59:57.150000Z\n",
-      "2018-04-08T02:43:43.847000Z\n",
-      "2018-04-07T16:37:26.348000Z\n",
-      "2018-04-07T01:40:35.363000Z\n",
-      "2018-04-04T01:08:32.538000Z\n",
-      "2018-04-01T01:49:38.643000Z\n",
-      "2018-03-28T19:14:58.667000Z\n",
-      "2018-03-25T18:33:23.543000Z\n",
-      "2018-03-24T01:50:48.885000Z\n",
-      "2018-03-20T23:58:53.258000Z\n",
-      "2018-03-18T17:40:50.155000Z\n",
-      "2018-03-18T15:57:24.408000Z\n",
-      "2018-03-15T15:13:32.784000Z\n",
-      "2018-03-15T14:21:32.121000Z\n",
-      "2018-03-14T02:06:30.124000Z\n",
-      "2018-03-11T18:13:08.443000Z\n",
-      "2018-03-10T22:38:19.260000Z\n",
-      "2018-03-08T21:10:09.091000Z\n",
-      "2018-03-08T20:29:52.048000Z\n",
-      "2018-03-07T16:47:07.731000Z\n",
-      "2018-03-07T01:37:42.864000Z\n",
-      "2018-03-05T16:15:43.372000Z\n",
-      "2018-03-05T15:42:30.426000Z\n",
-      "2018-02-28T15:11:22.064000Z\n",
-      "2018-02-26T15:39:37.838000Z\n",
-      "2018-02-22T02:04:02.052000Z\n",
-      "2018-02-21T16:25:28.839000Z\n",
-      "2018-01-12T18:16:31Z\n",
-      "2018-01-12T17:36:15.891000Z\n",
-      "2018-01-09T00:20:18.730000Z\n",
-      "2018-01-08T15:18:25.626000Z\n",
-      "2018-01-06T20:05:19.633000Z\n",
-      "2018-01-06T18:49:18.623000Z\n",
-      "2017-12-07T03:23:38.667000Z\n",
-      "2017-11-29T23:21:10.895000Z\n",
-      "2017-11-26T18:34:37.781000Z\n",
-      "2017-11-18T22:37:57.200000Z\n",
-      "2017-11-18T02:55:57.816000Z\n",
-      "2017-11-08T22:14:53.215000Z\n",
-      "2017-11-01T15:22:32.032000Z\n",
-      "2017-10-29T21:38:01.422000Z\n",
-      "2017-10-27T16:18:32.237000Z\n",
-      "2017-10-24T15:53:06.216000Z\n",
-      "2017-10-20T02:03:16.650000Z\n",
-      "2017-10-20T01:36:24.191000Z\n",
-      "2017-10-18T19:48:32.890000Z\n",
-      "2017-10-17T02:26:18.504000Z\n",
-      "2017-10-12T15:16:00Z\n",
-      "2017-10-08T13:00:30.767000Z\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# perameters\n",
-    "userRunningData = userTestData6bd5f3c04e6b5279aca633c2a245dd9c\n",
+    "userRunningData = []\n",
     "requiredDistance = 1\n",
     "requiredStreakLengthDays = 3\n",
     "\n",
     "\n",
-    "\n",
-    "numDaysInCurrentStreak = 1\n",
-    "streaksLengths = []\n",
-    "\n",
     "for workout in userRunningData:\n",
-    "    print(workout['start'])\n",
     "    workout['start'] = datetime.strptime(workout['start'][:10], '%Y-%m-%d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get last year's max pace for runs over distanceKm\n",
+    "lastYearsRuns = list(filter(lambda x: 'pace' in x and x['start'].year == yearOf - 1, userRunningData))\n",
+    "maxPaceFromLastYear = max([run['pace'] for run in lastYearsRuns if run['distance'] >= distance], default=0)"
    ]
   },
   {
@@ -139,8 +111,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NkmRuns = list(filter(lambda x: 'distance' in x and x['distance'] >= requiredDistance, userRunningData))\n",
-    "datesOfNkRuns = sorted({run['start'] for run in NkmRuns})  # had to do this in 2 steps to avoid key error"
+    "# get this year's runs that were over distanceKm\n",
+    "thisYearsRuns = list(filter(lambda x: 'pace' in x and x['start'].year == yearOf, userRunningData))\n",
+    "thisYearsRunsFinal = [run for run in thisYearsRuns if run['distance'] >= distance]"
    ]
   },
   {
@@ -149,14 +122,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# get the max pace per month\n",
+    "thisYearsRunsMaxPacesByMonth = {}\n",
     "\n",
-    "# compare each with the next item\n",
-    "for i in range(len(datesOfNkRuns)-1):\n",
-    "    if datesOfNkRuns[i] + timedelta(1) == datesOfNkRuns[i+1]:\n",
-    "        numDaysInCurrentStreak = numDaysInCurrentStreak + 1\n",
-    "    else:\n",
-    "        streaksLengths.append(numDaysInCurrentStreak)\n",
-    "        numDaysInCurrentStreak = 1"
+    "for i in range(12):\n",
+    "    thisYearsRunsMaxPacesByMonth[i+1] = max([run['pace'] for run in thisYearsRunsFinal if run['start'].month == i + 1], default=0)"
    ]
   },
   {
@@ -167,7 +137,7 @@
     {
      "data": {
       "text/plain": [
-       "0"
+       "{1: 0, 2: 0, 3: 0, 4: 0, 5: 0, 6: 0, 7: 0, 8: 0, 9: 0, 10: 0, 11: 0, 12: 0}"
       ]
      },
      "execution_count": 8,
@@ -176,8 +146,54 @@
     }
    ],
    "source": [
+    "thisYearsRunsMaxPacesByMonth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# loop through and count the times they PR'd by pace\n",
+    "fastest = maxPaceFromLastYear\n",
+    "thisYearsPRs = 0\n",
+    "for currentMonthMaxPace in thisYearsRunsMaxPacesByMonth:\n",
+    "    print(thisYearsRunsMaxPacesByMonth[currentMonthMaxPace])\n",
+    "    if thisYearsRunsMaxPacesByMonth[currentMonthMaxPace] > fastest:\n",
+    "        fastest = currentMonthMaxPace\n",
+    "        thisYearsPRs = thisYearsPRs + 1\n",
     "\n",
-    "sum([trunc(streakLen/requiredStreakLengthDays) for streakLen in streaksLengths])"
+    "thisYearsPRs"
    ]
   },
   {
